# old-projects

./: .gitignore  README.md
Estimators/: README.md  pyproject.toml
Estimators/src/ngs_ee/: adap_strat.py  estimator.py  nn.py  nn_estimator.py
Estimators/test/: test_estimator.py  test_nn.py
myWLscripts/: .gitignore  README.md
myWLscripts/DSwA/: Untitled.ipynb  ex0.ipynb  ex0.wls  ex1.ipynb
nnmltf/: .gitignore  README.md
nnmltf/old/: 01-BasicModel.ipynb
notesCT/: CT0.tex  CT1.tex  CT2.tex  CT3.tex  README.md  bibmaster.bib  master.tex  titlepage.tex
notesCT/fotos/: CT1-1.tex  CT1-2.tex  CT1-3.tex  CT1-4.tex  CT3-1.tex
